name:                data-prometheus
version:             0.1.0.0
synopsis:            Prometheus metrics data types and parser
description:         Prometheus metrics data types and parser
homepage:            https://github.com/vpsfreecz/data-prometheus
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2018 Richard Marko
category:            Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Prometheus
                     , Data.Prometheus.Parse
                     , Data.Prometheus.Pretty
                     , Data.Prometheus.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , attoparsec
                     , containers
                     , wreq
  default-language:    Haskell2010

executable data-prometheus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , bytestring
                     , lens
                     , wreq
                     , data-prometheus
  default-language:    Haskell2010


test-suite data-prometheus-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParseSpec
                       PrettySpec
                       SpecHelper
  build-depends:       base >= 4.7 && < 5
                     , data-prometheus
                     , attoparsec
                     , containers
                     , raw-strings-qq
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vpsfreecz/data-prometheus
